content/boundary/v1.0.x/content/docs/rbac/index.mdx
---
layout: docs
page_title: Permissions index
description: >-
  Learn about Boundary's RBAC (Role-based access control), allow-only permissions model. Understand how permissions are configured using grant strings and roles.
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2026-05-11T10:18:43-04:00
last_modified: 2026-08-06T16:39:05.000Z
# END AUTO GENERATED METADATA
---

# Permissions in Boundary

Boundary's permissions model is a composable, role-based access control (RBAC), allow-only model that
attempts to marry flexibility with usability.
The following pages discuss the permission model's fundamental concepts, provide examples of the specific forms of allowed grants, and contain a table that acts as a cheat sheet to help you craft roles.

Boundary's [domain model](/boundary/docs/domain-model) is based on resource
types. You can implement resource types directly, such as with targets, or they can be
abstract types that you implement using concrete types within the system. As an
example of the latter, a host catalog is an abstract type and a static host
catalog is a concrete type.

From a permissions standpoint, all actions take place against directly
implemented or abstract types. There may be actions that are only implemented by
some concrete types, for example, not all `auth-method` implementations support a
`change-password` action. But the permissions model still defines these
capabilities at the abstract type level.

At a very high level, you declare permissions in Boundary using grant strings
and map them to principals using roles.

## Grant strings

Each grant string is a mapping that describes a resource or set of resources and
the permissions that should be granted on them.

A grant string has a form similar to:

`ids=<id>;type=<type>;actions=<action list>;output_fields=<fields list>`

Selectors are used to indicate the resources on which the grant should apply,
using specific IDs or wildcard IDs and type selectors.

You can supply grant strings using a human-friendly string syntax or using JSON.

### Assigned permissions

You can grant users permissions to any Boundary resources that are identified by ID or Type selectors.
There are two types of assigned permissions:

- An `actions` field indicating which actions to allow the client to perform on
  the resources matched by `id` and `type`

- An `output_fields` field indicating which top-level fields to return in the
  response.

## Roles

@include 'rbac/role-definition.mdx'

When a user makes a request, the client may provide the scope or Boundary may look it up using the resource's ID.
This scope ID, along with the user's ID and the IDs of the groups the user belongs to, control which roles Boundary fetches to provide grants for the request.

A role provides grants for a request if the grant scope ID matches the request's
scope ID and one or more of the following are true:

- The user's ID is contained in the principal IDs set on the role
- A group the user belongs to is contained in the principal IDs set on the role
- The user is logged in and the `u_auth` user is contained in the principal IDs
  set on the role
- The role contains the `u_anon` user in the in the principal IDs set on the
  role

Roles are composable; a user's final set of grants will be composed of grants
that originate from all matching roles.

## More information

- To learn more about the permissions you can assign to Boundary principals, refer to [Assignable permissions](/boundary/docs/rbac/assignable-permissions).
- To learn more about grant strings and view example formats, refer to [Permission grant formats](/boundary/docs/rbac/permission-grant-formats).
- To view a cheat sheet to help you manage your permissions, refer to [Resource tables](/boundary/docs/rbac/resource-table).
- To view a cheat sheet to help you create roles, refer to [Example roles](/boundary/docs/rbac/example-roles).
- To view common use cases for grants based on job function, refer to [Common use cases](/boundary/docs/rbac/use-cases).

## Next steps

1. Before you assign permissions, principals need an account to authenticate with. Refer to [Configure authentication](/boundary/docs/authentication) to set up a password, OIDC, or LDAP auth method.
1. To create scopes that logically group your resources, refer to [Create scopes to group resources](/boundary/docs/rbac/create-scopes).
1. To update or delete scopes, refer to [Manage scopes](/boundary/docs/rbac/manage-scopes).
1. To configure roles and grant scopes for users and groups, refer to [Manage access with roles](/boundary/docs/rbac/manage-roles).
1. To manage access to resources dynamically, refer to [Manage principals](/boundary/docs/rbac/users/manage-users-groups) and [Filter managed groups](/boundary/docs/rbac/users/managed-groups).
